rust_test_framework/tests/compile_tests/should_fail/jr_404.stderr
error: Could not fetch URL https://jsonplaceholder.typicode.com/invalid-path-that-returns-404: https://jsonplaceholder.typicode.com/invalid-path-that-returns-404: status code 404
  --> tests/compile_tests/should_fail/jr_404.rs:10:35
   |
10 | #[test_params_source(JsonResponse("https://jsonplaceholder.typicode.com/invalid-path-that-returns-404"))]
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
